--- a/workshop3/workshopA_2024.Rmd
+++ b/workshop3/workshopA_2024.Rmd
@@ -40,10 +40,13 @@ Each member of your group will play one of the following roles as you attempt to
 6.	Microbiologist (working in one of the NHS Scotland clinical labs)
 7.	Public communications expert (past and current sci comm campaigns)
 8.  Doctor at a major surgery in `r city_name`
+9. Epidemiologist from the local university, an expert on <i>Legionella pneumophila</i> transmission
 
 You must work together, using the information that has been provided for you in the attached information packets, and decide what action(s) should be taken to control the <i>Legionella</i> outbreak currently plaguing your city, `r city_name`. Your actions should be evidence-based – use the peer-reviewed literature to decide on measures that will stop the pandemic in your scenario.
 
 Your action points may include directives to gather more information (e.g., contact tracing of current cases, microbiological testing of food/water, etc.), or specific directives (e.g. public health measures, non-pharmaceutical interventions, etc.). Use the data/expertise of all group members. Be clear, concise, and specific.
+
+You may choose to include mathematical modeling as part of your decision making (for example, using an [epidemic calculator](http://gabgoh.github.io/COVID/index.html) or other models); if you do so, you should provide details of your modelling and predictions when you submit your group's pro forma.
 
 You should submit 3-5 specific actions to control the pandemic, using the [workshop 3 pro forma](/proformas/BM424_workshop3_proforma.docx) (also available on MyPlace). Submit this by noon, Friday March 1st, via the submission link on MyPlace. 
 
@@ -116,9 +119,9 @@ kable(x = Councillors,
 
 ```
 <br><br>
-The overall budget (expenditures) for the 2021-2022 financial year is £`r sample(400000000:600000000, size=1)`. A summary of expeditures by category for this financial year is shown below. 
+The overall budget (expenditures) for the 2022-2023 financial year was £`r sample(400000000:600000000, size=1)`. A summary of expeditures by category for this financial year is shown below. 
 
-```{r A4, fig.cap="Public expenditures by category for the 2021-2022 financial year (Source: Inverkeld City Council)", echo=FALSE}
+```{r A4, fig.cap="Public expenditures by category for the 2022-2023 financial year (Source: Inverkeld City Council)", echo=FALSE}
 
 expenses <- data.frame(
   Category=c("Education", "Industry and Agriculture", "Social Care", "Transport", "Public order and safety", "Healthcare", "Housing", "Other"),
@@ -245,8 +248,6 @@ As Provost of `r city_name`, you are of course familiar with the work of the [St
 
 * [Communicating risk in public health emergencies: A WHO guideline for emergency risk communication (ERC) policy and practice](https://apps.who.int/iris/bitstream/handle/10665/259807/9789241550208-eng.pdf?sequence=2&isAllowed=y)
 
-
-
 ***
 
 ## Information Packet A2
@@ -327,7 +328,7 @@ Your briefing packet also includes the following documents:
 
 * Khodr, A et al. “Molecular epidemiology, phylogeny and evolution of Legionella.” Infection, genetics and evolution : journal of molecular epidemiology and evolutionary genetics in infectious diseases vol. 43 (2016): 108-22. doi:10.1016/j.meegid.2016.04.033
 
-* Buultjens, Andrew H et al. “A Supervised Statistical Learning Approach for Accurate Legionella pneumophila Source Attribution during Outbreaks.” Applied and environmental microbiology vol. 83,21 e01482-17. 17 Oct. 2017, doi:10.1128/AEM.01482-17
+* Buultjens, Andrew H et al. “A Supervised Statistical Learning Approach for Accurate <i>Legionella pneumophila</i> Source Attribution during Outbreaks.” Applied and environmental microbiology vol. 83,21 e01482-17. 17 Oct. 2017, doi:10.1128/AEM.01482-17
 
 
 ***
@@ -340,9 +341,9 @@ You are the director of `r city_name`'s main hospital, the `r hospital_name`, wh
 knitr::include_graphics(rep("images/Queen-Rose.png"))
 ```
 
-The annual operating budget for financial year 2021-2022 was £1.3 million, and average expenditures are shown by category in the figure below. 
+The annual operating budget for financial year 2022-2023 was £1.3 million, and average expenditures are shown by category in the figure below. 
 
-```{r A5, fig.cap="Hospital expenditures by category for financial year 2021-2022 (Source: NHS Scotland)", echo=FALSE}
+```{r A5, fig.cap="Hospital expenditures by category for financial year 2022-2023 (Source: NHS Scotland)", echo=FALSE}
 
 expenses <- data.frame(
   Category=c("Staff costs", "Healthcare expenditures (drugs, supplies, etc.)", "Other supplies", "Other running costs (procurement, IT, HR, etc.)"),
@@ -396,7 +397,7 @@ ggplot(admissions, aes(x="", y=value, fill=Category)) +
 ```
 
 
-A&E waiting times have been called "unacceptably high" in recent months, both by the press and by tthe hospital ombudsman.
+A&E waiting times have been called "unacceptably high" in recent months, both by the press and by the hospital ombudsman.
 
 ```{r A8, fig.cap="ICU waiting times for the Inverkeld Queen Rose hospital (Source: NHS Scotland)", echo=FALSE}
 
@@ -499,7 +500,7 @@ Some of the key `r city_name` facts and figures at a glance are summarized in th
 <br><br>
 Most of the `r city_name` water supply comes from nearby Loch Cairnavar. There are two wastewater treatment plants serving `r city_name`, employing a total of `r sample(75:150, size=1)` people.
 
-```{r A10, fig.cap="Inverkeld water usage for 2021-2022 (Source: SEPA)", echo=FALSE}
+```{r A10, fig.cap="Inverkeld water usage for 2022-2023 (Source: SEPA)", echo=FALSE}
 
 water <- data.frame(
   Category=c("Residential", "Business", "Industrial", "Agricultural"),
@@ -541,7 +542,7 @@ You are also familiar with the literature surrounding <i>Legionella</i> identifi
 
 * Benitez, Alvaro J, and Jonas M Winchell. “Clinical application of a multiplex real-time PCR assay for simultaneous detection of <i>Legionella</i> species, <i>Legionella pneumophila</i>, and <i>Legionella pneumophila</i> serogroup 1.” Journal of clinical microbiology vol. 51,1 (2013): 348-51. 
 
-* Pascale, Maria Rosaria et al. “Use of Fourier-Transform Infrared Spectroscopy With IR Biotyper® System for Legionella pneumophila Serogroups Identification.” Frontiers in microbiology vol. 13 866426. 26 Apr. 2022, doi:10.3389/fmicb.2022.866426
+* Pascale, Maria Rosaria et al. “Use of Fourier-Transform Infrared Spectroscopy With IR Biotyper® System for <i>Legionella pneumophila</i> Serogroups Identification.” Frontiers in microbiology vol. 13 866426. 26 Apr. 2022, doi:10.3389/fmicb.2022.866426
 
 ***
 
@@ -587,8 +588,22 @@ You are one of the doctors at the largest surgery in `r city_name`. In the past 
 
 * Viasus, Diego et al. “Legionnaires' Disease: Update on Diagnosis and Treatment.” Infectious diseases and therapy vol. 11,3 (2022): 973-986. doi:10.1007/s40121-022-00635-7
 
+***
 
+## Information Packet A9
 
+You are an epidemiologist working at the University of `r city_name`, and have been studying <i>Legionella</i> transmission dynamics for the past `r sample(2:10, size=1)` years. As such, you are very familiar with the relevant literature, including papers such as: 
 
+* Grossmann NV, Milne C, Martinez MR, et al. Large Community Outbreak of Legionnaires Disease Potentially Associated with a Cooling Tower - Napa County, California, 2022. MMWR Morb Mortal Wkly Rep. 2023;72(49):1315-1320. Published 2023 Dec 8. doi:10.15585/mmwr.mm7249a1
 
+* Mentula S, Kääriäinen S, Jaakola S, et al. Tap water as the source of a Legionnaires' disease outbreak spread to several residential buildings and one hospital, Finland, 2020 to 2021. Euro Surveill. 2023;28(11):2200673. doi:10.2807/1560-7917.ES.2023.28.11.2200673
 
+* Zayed AR, Bitar DM, Steinert M, et al. Comparative Genomics of <i>Legionella pneumophila</i> Isolates from the West Bank and Germany Support Molecular Epidemiology of Legionnaires' Disease. Microorganisms. 2023;11(2):449. Published 2023 Feb 10. doi:10.3390/microorganisms11020449
+
+* Domazetovska A, Jensen SO, Gray M, Radzieta M, Maley M. Culture-Free Phylogenetic Analysis of <i>Legionella pneumophila</i> Using Targeted CRISPR/Cas9 Next-Generation Sequencing. Microbiol Spectr. 2022;10(4):e0035922. doi:10.1128/spectrum.00359-22
+
+* Ricci ML, Fillo S, Ciammaruconi A, et al. Genome analysis of <i>Legionella pneumophila</i> ST23 from various countries reveals highly similar strains. Life Sci Alliance. 2022;5(6):e202101117. Published 2022 Mar 2. doi:10.26508/lsa.202101117
+
+* Slow S, Anderson T, Murdoch DR, Bloomfield S, Winter D, Biggs PJ. Extensive epigenetic modification with large-scale chromosomal and plasmid recombination characterise the Legionella longbeachae serogroup 1 genome. Sci Rep. 2022;12(1):5810. Published 2022 Apr 6. doi:10.1038/s41598-022-09721-9 
+
+* Uldum SA, Schjoldager LG, Baig S, Cassell K. A Tale of Four Danish Cities: <i>Legionella pneumophila</i> Diversity in Domestic Hot Water and Spatial Variations in Disease Incidence. Int J Environ Res Public Health. 2022;19(5):2530. Published 2022 Feb 22. doi:10.3390/ijerph19052530
