--- a/workshop3/workshopB_2024.Rmd
+++ b/workshop3/workshopB_2024.Rmd
@@ -40,12 +40,15 @@ Each member of your group will play one of the following roles as you attempt to
 6.	Microbiologist (working in one of the NHS Scotland clinical labs)
 7.	Public communications expert (past and current sci comm campaigns)
 8.  Doctor at a major surgery in `r city_name`
+9.  Epidemiologist from the local university, an expert on influenza virus A transmission
 
 You must work together, using the information that has been provided for you in the attached information packets, and decide what action(s) should be taken to control the outbreak currently plaguing your city, `r city_name`. Your actions should be evidence-based – use the peer-reviewed literature to decide on measures that will stop the pandemic in your scenario.
 
 Your action points may include directives to gather more information (e.g., contact tracing of current cases, microbiological testing of food/water, etc.), or specific directives (e.g. public health measures, non-pharmaceutical interventions, etc.). Use the data/expertise of all group members. Be clear, concise, and specific.
 
-You should submit 3-5 specific actions to control the pandemic, using the [workshop 3 pro forma](/proformas/BM424_workshop3_proforma.docx) (also available on MyPlace). Submit this by noon, Friday March 1st, via the submission link on MyPlace. 
+You may choose to include mathematical modeling as part of your decision making (for example, using an [epidemic calculator](http://gabgoh.github.io/COVID/index.html) or other models); if you do so, you should provide details of your modelling and predictions when you submit your group's pro forma.
+
+You should submit 3-5 specific actions to control the pandemic, using the [workshop 3 pro forma](../proformas/BM424_workshop3_proforma.docx) (also available on MyPlace). Submit this by noon, Friday March 1st, via the submission link on MyPlace. 
 
 ***
 
@@ -117,9 +120,9 @@ kable(x = Councillors,
 
 ```
 <br><br>
-The overall budget (expenditures) for the 2021-2022 financial year is £`r sample(400000000:600000000, size=1)`. A summary of expeditures by category for this financial year is shown below. 
+The overall budget (expenditures) for the 2022-2023 financial year was £`r sample(400000000:600000000, size=1)`. A summary of expeditures by category for this financial year is shown below. 
 
-```{r A4, fig.cap="Public expenditures by category for the 2021-2022 financial year (Source: Baltyre City Council)", echo=FALSE}
+```{r A4, fig.cap="Public expenditures by category for the 2022-2023 financial year (Source: Baltyre City Council)", echo=FALSE}
 
 expenses <- data.frame(
   Category=c("Education", "Industry and Agriculture", "Social Care", "Transport", "Public order and safety", "Healthcare", "Housing", "Other"),
@@ -345,9 +348,9 @@ You are the director of `r city_name`'s main hospital, the `r hospital_name`, wh
 knitr::include_graphics(rep("images/Queens-College.png"))
 ```
 
-The annual operating budget for financial year 2021-2022 was £1.5 million, and average expenditures are shown by category in the figure below. 
+The annual operating budget for financial year 2022-2023 was £1.5 million, and average expenditures are shown by category in the figure below. 
 
-```{r A5, fig.cap="Hospital expenditures by category for financial year 2021-2022 (Source: NHS Scotland)", echo=FALSE}
+```{r A5, fig.cap="Hospital expenditures by category for financial year 2022-2023 (Source: NHS Scotland)", echo=FALSE}
 
 expenses <- data.frame(
   Category=c("Staff costs", "Healthcare expenditures (drugs, supplies, etc.)", "Other supplies", "Other running costs (procurement, IT, HR, etc.)"),
@@ -579,4 +582,22 @@ You are one of the doctors at the largest surgery in `r city_name`. In the past 
 
 * Okiyama, Sho et al. “Examining the Use of an Artificial Intelligence Model to Diagnose Influenza: Development and Validation Study.” Journal of medical Internet research vol. 24,12 e38751. 23 Dec. 2022.
 
+***
 
+## Information Packet B9
+
+You are an epidemiologist working at the University of `r city_name`, and have been studying influenza A transmission dynamics for the past `r sample(2:10, size=1)` years. As such, you are very familiar with the relevant literature, including papers such as: 
+
+* Castro-Sanguinetti GR, González-Veliz R, Callupe-Leyva A, et al. Highly pathogenic avian influenza virus H5N1 clade 2.3.4.4b from Peru forms a monophyletic group with Chilean isolates in South America. Sci Rep. 2024;14(1):3635. Published 2024 Feb 13. doi:10.1038/s41598-024-54072-2
+
+* Yang Q, Wang B, Lemey P, et al. Synchrony of Bird Migration with Global Dispersal of Avian Influenza Reveals Exposed Bird Orders. Nat Commun. 2024;15(1):1126. Published 2024 Feb 6. doi:10.1038/s41467-024-45462-1
+
+* Seo YR, Cho AY, Si YJ, et al. Evolution and Spread of Highly Pathogenic Avian Influenza A(H5N1) Clade 2.3.4.4b Virus in Wild Birds, South Korea, 2022-2023. Emerg Infect Dis. 2024;30(2):299-309. doi:10.3201/eid3002.231274
+
+* Croville G, Walch M, Sécula A, et al. An amplicon-based nanopore sequencing workflow for rapid tracking of avian influenza outbreaks, France, 2020-2022. Front Cell Infect Microbiol. 2024;14:1257586. Published 2024 Jan 22. doi:10.3389/fcimb.2024.1257586
+
+* Wang X, Kim KW, Walker G, Stelzer-Braid S, Scotch M, Rawlinson WD. Genome characterization of influenza A and B viruses in New South Wales, Australia, in 2019: A retrospective study using high-throughput whole genome sequencing. Influenza Other Respir Viruses. 2024;18(1):e13252. doi:10.1111/irv.13252
+
+* Szablewski CM, McBride DS, Trock SC, et al. Evolution of influenza A viruses in exhibition swine and transmission to humans, 2013-2015. Zoonoses Public Health. Published online December 18, 2023. doi:10.1111/zph.13104
+
+* Perofsky AC, Huddleston J, Hansen C, et al. Antigenic drift and subtype interference shape A(H3N2) epidemic dynamics in the United States. Preprint. medRxiv. 2023;2023.10.02.23296453. Published 2023 Oct 3. doi:10.1101/2023.10.02.23296453
